--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -10,7 +10,7 @@
         <div class="col-sm-3" id="icon"><a href=""><img [src]="test" alt=""></a></div>
         <div class="col-sm-3" id="icon"><a href=""><img [src]="calendar" alt=""></a></div>
         <div class="col-sm-3" id="icon"><a href=""><img [src]="friends" alt=""></a></div>
-        <!--<div class="col-sm-3" id="icon"><a href=""><img [src]="shield" alt=""></a></div>-->
+        <div class="col-sm-3" id="icon"><a href=""><img [src]="shield" alt=""></a></div>
       </div>
     </div>
     <div class="col-md-4" id="profile">
