--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,7 +1,7 @@
 <div>
 <nav class="navbar navbar-light bg-light fixed-top">
   <a href="/"><img id="logo" class="navbar-brand mb-0" [src]="logo"></a>
-  <button class="btn btn-danger my-2 my-sm-0" data-toggle="modal" data-target="#modalLogin">ENTRAR</button>
+  <button class="btn btn-danger my-2 my-sm-0" id="openModal" data-toggle="modal" data-target="#modalLogin">ENTRAR</button>
 </nav>
 </div>
 <div class="modal" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
