--- a/src/app/release-notes/release-notes.component.html
+++ b/src/app/release-notes/release-notes.component.html
@@ -15,9 +15,9 @@
 
 <div id="conteudoEsq"> 
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a href="#14-marco">14 de Março de 2019</a></li>
-        <li class="list-group-item"><a href="#08-marco">08 de Março de 2019</a></li>
-        <li class="list-group-item"><a href="#27-fevereiro">27 de Fevereiro de 2019</a></li>
+        <li class="list-group-item"><a href="#14-marco">14 de Março de 2019 - Versão 14.03.19</a></li>
+        <li class="list-group-item"><a href="#08-marco">08 de Março de 2019 - Versão 08.03.19</a></li>
+        <li class="list-group-item"><a href="#27-fevereiro">27 de Fevereiro de 2019 - Versão 27.02.19</a></li>
     </ul>
 </div>
 
