--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -8,7 +8,7 @@
     <div class="padding">
       <div class="padding">
         <div class="padding">
-          <div class="register">
+          <div class="register" style="text-align: center">
             <div>
               <h4>
                 <strong>
@@ -21,22 +21,30 @@
                 Vai ser rápido! Basta preencher os seguintes dados:
               </p>
             </div>
-            <div class="col-5">
+            <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
                 <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" [mustMatch]="['password', 'confirmPassword']" novalidate>
-                    <div class="form-group">
+                  <div class="row">
+                    <div class="col-6">
+                  <div class="form-group">
                         <label for="firstName">Nome</label>
                         <input type="text" class="form-control" name="firstName" [(ngModel)]="model.firstName" #firstName="ngModel" [ngClass]="{ 'is-invalid': f.submitted && firstName.invalid }" required />
                         <div *ngIf="f.submitted && firstName.invalid" class="invalid-feedback">
                             <div *ngIf="firstName.errors.required">Digite seu nome.</div>
                         </div>
                     </div>
+                  </div>
+                  <div class="col-6">
                     <div class="form-group">
                         <label for="lastName">Sobrenome</label>
                         <input type="text" class="form-control" name="lastName" [(ngModel)]="model.lastName" #lastName="ngModel" [ngClass]="{ 'is-invalid': f.submitted && lastName.invalid }" required />
                         <div *ngIf="f.submitted && lastName.invalid" class="invalid-feedback">
                             <div *ngIf="lastName.errors.required">Digite seu sobrenome.</div>
+                          </div>
                         </div>
                     </div>
+                  </div> 
                     <div class="form-group">
                         <label for="email">Email</label>
                         <input id="email" type="email" class="form-control" name="email" [(ngModel)]="model.email" #email="ngModel" [ngClass]="{ 'is-invalid': f.submitted && email.invalid }" required email />
@@ -66,6 +74,8 @@
                     </div>
                 </form>
             </div> 
+            <div class="col-2"></div>
+            </div>
           </div>
         </div>
       </div>
