--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -45,6 +45,8 @@
                         </div>
                     </div>
                   </div> 
+                  <div class="row">
+                  <div class="col-6"> 
                     <div class="form-group">
                         <label for="email">Email</label>
                         <input id="email" type="email" class="form-control" name="email" [(ngModel)]="model.email" #email="ngModel" [ngClass]="{ 'is-invalid': f.submitted && email.invalid }" required email />
@@ -52,7 +54,9 @@
                             <div *ngIf="email.errors.required">Digite seu email.</div>
                             <div *ngIf="email.errors.email">Digite um email válido.</div>
                         </div>
+                      </div>
                     </div>
+                    <div class="col-6"> 
                     <div class="form-group">
                         <label for="password">Senha</label>
                         <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" [ngClass]="{ 'is-invalid': f.submitted && password.invalid }" required minlength="6" />
@@ -61,17 +65,24 @@
                             <div *ngIf="password.errors.minlength">A senha deve conter 6 dígitos.</div>
                         </div>
                     </div>
+                     </div>
+                    </div>
+                     <div class="col-14">
                     <div class="form-group">
-                        <label for="confirmPassword">Confirmar senha</label>
+                        <label for="confirmPassword">Você é?</label>
                         <input type="password" class="form-control" name="confirmPassword" [(ngModel)]="model.confirmPassword" #confirmPassword="ngModel" [ngClass]="{ 'is-invalid': f.submitted && confirmPassword.invalid }" required />
                         <div *ngIf="f.submitted && confirmPassword.invalid" class="invalid-feedback">
-                            <div *ngIf="confirmPassword.errors.required">Confirme sua senha.</div>
-                            <div *ngIf="confirmPassword.errors.mustMatch">As senhas devem ser iguais.</div>
                         </div>
+                      </div>
                     </div>
-                    <div class="form-group">
-                        <button class="btn btn-danger" >Cadastrar</button>
+                        <div class="form-group">
+                        <button class="btn btn-danger">ENTRAR</button>
                     </div>
+                    <div>
+                        <h5>
+                            Já é cadastrado? Acesse aqui!
+                        </h5>
+                      </div>
                 </form>
             </div> 
             <div class="col-2"></div>
