--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,22 +1,36 @@
+<div class="fundo jumbotron">
+  <div class="container">
 
-<div>
-<div>
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img [src]="banner" class="d-block w-100" alt="...">
-      </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <i class="fas fa-chevron-circle-left fa-3x"></i>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <i class="fas fa-chevron-circle-right fa-3x"></i>
-      <span class="sr-only">Next</span>
-    </a>
+    <br/> <br/>
+    <h1 id="home" class="display-4" style="color:white; display: inline; font-size: 25px">HOME - ANTENA CPS</h1>
+  
+    <div class="btnEntrar jumbrotron"> 
+        <button type="button" class="btn btn-danger btn-lg" id="openModal" data-toggle="modal" data-target="#modalLogin" style="width: 200px">ENTRAR</button>
+    </div> 
+
   </div>
 </div>
-</div>
+
+
+<!-- <div>  CARROUSEL
+    <div>
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img [src]="banner" class="d-block w-100" alt="...">
+          </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <i class="fas fa-chevron-circle-left fa-3x"></i>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <i class="fas fa-chevron-circle-right fa-3x"></i>
+          <span class="sr-only">Next</span>
+        </a>
+      </div> -->
+
+
+
 <div id="background" class="" [ngStyle]="{'background-image': 'url(' + graf + ')'}">
   <br />
   
@@ -27,4 +41,3 @@
   <br />
    
 </div> 
-</div>
