Novo cadastro parte 2

--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -62,4 +62,29 @@
 .btn btn-danger {
   margin-left: 30%;
 }
+
+#icon
+{
+  margin-left: 600px;
+  width: 1px;
+  margin-top: 150px;
+}
  
+#palavras {
+  margin-left: 640px;
+  margin-top: -73px;
+}
+
+#icon1
+{
+  margin-left: 660px;
+  width: 1px;
+  margin-top: -20px;
+}
+
+#icon2
+{
+  margin-left: 710px;
+  width: 1px;
+}
+
