--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -65,26 +65,30 @@
 
 #icon
 {
-  margin-left: 600px;
+  margin-left: 640px;
   width: 1px;
-  margin-top: 150px;
+  height: 1px;
+  margin-top: -30px;
 }
  
 #palavras {
   margin-left: 640px;
-  margin-top: -73px;
+  margin-top: -43px;
 }
 
 #icon1
 {
-  margin-left: 660px;
+  margin-left: 670px;
   width: 1px;
-  margin-top: -20px;
+  height: 1px;
+ 
 }
 
 #icon2
 {
-  margin-left: 710px;
+  margin-left: 700px;
   width: 1px;
+  height: 1px;
+ 
 }
 
