--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -79,7 +79,12 @@
                       </div>
                     </div>
                         <div class="form-group">
-                        <button class="btn btn-danger">ENTRAR</button>
+                        <button class="btn btn-danger">ENTRAR</button><div>
+                            <div  id="icon"><a href=""><img [src]="facebook" style="max-width: 27px" alt=""></a></div>
+                            <div  id="icon1"><a href=""><img [src]="linkedin" style="max-width: 27px" alt=""></a></div>
+                            <div  id="icon2"><a href=""><img [src]="google" style="max-width: 27px" alt=""></a></div>
+                            <!-- <div class="col-sm-3" id="icon"><a href=""><img [src]="shield" alt=""></a></div> -->
+                        </div> 
                     </div>
                     <div id="palavras">
                       <p>
