--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -45,6 +45,8 @@
                         </div>
                     </div>
                   </div> 
+                  <div class="row">
+                    <div class="col-6">
                     <div class="form-group">
                         <label for="email">Email</label>
                         <input id="email" type="email" class="form-control" name="email" [(ngModel)]="model.email" #email="ngModel" [ngClass]="{ 'is-invalid': f.submitted && email.invalid }" required email />
@@ -53,6 +55,8 @@
                             <div *ngIf="email.errors.email">Digite um email válido.</div>
                         </div>
                     </div>
+                  </div>
+                  <div class="col-6">
                     <div class="form-group">
                         <label for="password">Senha</label>
                         <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" [ngClass]="{ 'is-invalid': f.submitted && password.invalid }" required minlength="6" />
@@ -61,6 +65,8 @@
                             <div *ngIf="password.errors.minlength">A senha deve conter 6 dígitos.</div>
                         </div>
                     </div>
+                  </div>
+                  </div>
                     <div class="form-group">
                         <label for="confirmPassword">Confirmar senha</label>
                         <input type="password" class="form-control" name="confirmPassword" [(ngModel)]="model.confirmPassword" #confirmPassword="ngModel" [ngClass]="{ 'is-invalid': f.submitted && confirmPassword.invalid }" required />
