--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -18,7 +18,7 @@
           <div>
             <form (ngSubmit)="onSubmit()" #frm="ngForm" >
               <label for="email">Email</label>
-              <input type="text" id="username" class="camposform" name="email" [(ngModel)]="model.email" required   >
+              <input type="email" id="username" class="camposform" name="email" [(ngModel)]="model.email" required   >
           
               <label for="password">Senha</label>
               <input type="password" id="password" class="camposform" name="password"  [(ngModel)]="model.password" required>
@@ -32,10 +32,10 @@
               <p>
                 Primeiro acesso? Cadastre-se <a href="/#/cadastro" onclick="$('#modalLogin').modal('hide')">aqui</a>.
               </p>
-              <!-- <div id="center">
-                <button type="button"  size="lg" class="btn btn-primary" id="fbcolor" ><i class="fab fa-facebook-f left"></i></button>
-                <button (click)="lgGoogle()" size="lg"  class="btn btn-secundary" id="ggcolor" >G</button>
-              </div> -->
+              <div id="center">
+                <button type="button"  size="lg" class="btn btn-primary" id="fbcolor"   (click)="submitLogin()"><i class="fab fa-facebook-f left"></i></button>
+                <!-- <button (click)="lgGoogle()" size="lg"  class="btn btn-secundary" id="ggcolor" >G</button> -->
+              </div>
             </form>
           </div>
       </div>
@@ -67,7 +67,7 @@
         </form>
       </div>
       <div style="text-align: center">
-        <h6>Ainda não é um Antenadx?<a href="/#/cadastro" data-dismiss="modal"> Clique aqui</a></h6>
+        <h6>Ainda não é um Antenadx?<a href="/#/cadastro" (click)="teste()" data-dismiss="modal"> Clique aqui</a></h6>
         <h6 id="back-login"><a data-target="#modalLogin" data-toggle="modal" data-dismiss="modal" href="#0">Voltar para o login</a></h6>
       </div>
       <div class="modal-footer">
