Implementações no cadastro

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -92,12 +92,10 @@
                       </p>
                     </div>
                     <div id="frases">
+                        <br>
+                        <br>  
                         <h5>
-                          <br />
-                          <br />
-                            Já é cadastrado? Acesse aqui!
-                            <br />
-                            <br />
+                          Já é cadastrado ?<a href="#0" data-toggle="modal" data-target="#modalLogin"> Acesse aqui</a>
                         </h5>
                       </div>
                 </form>
