Finalização do Cadastro

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -92,11 +92,15 @@
                       </p>
                     </div>
                     <div id="frases">
-                        <br>
                         <br>  
                         <h5>
-                          Já é cadastrado ?<a href="#0" data-toggle="modal" data-target="#modalLogin"> Acesse aqui</a>
+                          Já é cadastrado?<a href="#0" data-toggle="modal" data-target="#modalLogin"> Acesse aqui!</a>
                         </h5>
+                      </div>
+                      <div id="return">
+                        <h6>
+                            <a href="/#/"><u><VOLTAR</u></a>
+                        </h6>
                       </div>
                 </form>
             </div> 
