--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -76,7 +76,7 @@
                       </div>
                     </div>
                         <div class="form-group">
-                        <button class="btn btn-danger">ENTRAR</button><div>
+                        <button id= "btnEntrar"class="btn btn-danger">ENTRAR</button><div>
                             <div  id="icon"><a href=""><img [src]="facebook" style="max-width: 27px" alt=""></a></div>
                             <div  id="icon1"><a href=""><img [src]="linkedin" style="max-width: 27px" alt=""></a></div>
                             <div  id="icon2"><a href=""><img [src]="google" style="max-width: 27px" alt=""></a></div>
