Conexao da pagina de reset senha com a API back-end e inicio da função para realizar o login via facebook e google

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -37,13 +37,13 @@
               
        
               <div  id="iconF">   
-              <a href=""><img [src]="facebook" style="max-width: 27px" alt=""></a>
+              <a href=""><img [src]="facebook" (click)="lgFacebook()" style="max-width: 27px" alt=""></a>
               </div>
               <div  id="iconL">
               <a href=""><img [src]="linkedin" style="max-width: 27px" alt=""></a>
               </div>
               <div  id="iconG">
-              <a href=""><img [src]="google" style="max-width: 27px" alt=""></a>
+              <a href=""><img [src]="google"(click)="lgGoogle()" style="max-width: 27px" alt=""></a>
               </div>
 
 
