--- a/src/app/cadastro/re-password/re-password.component.html
+++ b/src/app/cadastro/re-password/re-password.component.html
@@ -1,5 +1,4 @@
-<div id="background" class="container-fluid" [ngStyle]="{'background-image': 'url(' + graf + ')'}">
-    <div class="padding">
+<div id="background" class="container-fluid">
       <div class="padding">
         <div class="padding">
           <div class="padding">
@@ -43,4 +42,3 @@
         </div>
       </div>
     </div>
-  </div>
