--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,3 +1,12 @@
+
+.background{
+    background-image: url(../../assets/background_4K.jpg);
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
 #bg-profile{
     width: 100%;
     max-height: 20%;
@@ -32,6 +41,12 @@
     margin-top: 100px;
     margin-left: -60px;
 }
+
+#port{
+    color: white;
+
+}
+
 .blog .carousel-indicators {
 	left: 0;
 	top: auto;
