Logon API Google

--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -65,20 +65,20 @@
 
 #icon
 {
-  margin-left: 640px;
+  margin-left: 88%;
   width: 1px;
   height: 1px;
-  margin-top: -30px;
+  margin-top: -5%;
 }
  
 #palavras {
-  margin-left: 640px;
-  margin-top: -49px;
+  margin-left: 89%;
+  margin-top: -65px;
 }
 
 #icon1
 {
-  margin-left: 670px;
+  margin-left: 92%;
   width: 1px;
   height: 1px;
  
@@ -86,7 +86,7 @@
 
 #icon2
 {
-  margin-left: 700px;
+  margin-left: 96%;
   width: 1px;
   height: 1px;
  
