Fechando modal após social login

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -88,7 +88,7 @@
                 style="font-size: 12px; margin-left: 7%"
                 >Esqueceu sua senha?</a
               >
-
+              <button id="closeModalLogin" data-dismiss="modal" hidden>sdadadadasd</button>
               <div id="iconF">  
                 <a
                   ><img
