--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top" id="navbar">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
       <div id="item-1 " >
         <a href="/"><img [src]="logo" alt="" id="logo"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,7 +16,7 @@
 
       </div>
       <div class="dropdown show col-md-2">
-          <a class="dropdown-toggle"role="button" id="dropdownMenuLink" data-toggle="dropdown">
+          <a class="dropdown-toggle"role="button" id="dropdownMenuLink" data-toggle="dropdown" style="color: white;">
             Olá, <b> Aluno (a)</b>
           </a>
           
