--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="background" id="border">
-    <app-navbar style="background-color: transparent"></app-navbar>
+    <app-profile-navbar style="background-color: transparent"></app-profile-navbar>
     <div class="container" style="margin-top: 300px">
         <div class="row">
             <div class="col-md-4">
@@ -16,7 +16,8 @@
                 </div>
                 <div id="profile-image">
                     <img id="profile-pic" [src]="fotoPerfil" alt="">
-                    <a href="#0" ><i class="fas fa-cog fa-3x"></i></a>
+                    <a href="#0" s
+                    ><i class="fas fa-cog fa-3x"></i></a>
                 </div>
                 <div id="user-info">
                     <div class="" style="margin-top: -5px;" >{{ aluno.escola }}</div>
@@ -48,9 +49,10 @@
             </div>
         </div>
         <div class="row" id="portfolio">
-            <div id="port">
+            <div id="port" class="row">
                 <h4>Meu Portfólio</h4>
             </div>
+        </div>
             <div class="row" id="border">
                 <div class="container">
                     <div class="row blog">
@@ -64,25 +66,25 @@
                                         <div class="row">
                                             <div class="col-md-3">
                                                 <a href="#">
-                                                    <img src="http://placehold.it/250x250" alt="Image"
+                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
                                                         style="max-width:100%;">
                                                 </a>
                                             </div>
                                             <div class="col-md-3">
                                                 <a href="#">
-                                                    <img src="http://placehold.it/250x250" alt="Image"
+                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
                                                         style="max-width:100%;">
                                                 </a>
                                             </div>
                                             <div class="col-md-3">
                                                 <a href="#">
-                                                    <img src="http://placehold.it/250x250" alt="Image"
+                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
                                                         style="max-width:100%;">
                                                 </a>
                                             </div>
                                             <div class="col-md-3">
                                                 <a href="#">
-                                                    <img src="http://placehold.it/250x250" alt="Image"
+                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
                                                         style="max-width:100%;">
                                                 </a>
                                             </div>
@@ -95,25 +97,25 @@
                                         <div class="row">
                                             <div class="col-md-3">
                                                 <a href="#">
-                                                    <img src="http://placehold.it/250x250" alt="Image"
+                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
                                                         style="max-width:100%;">
                                                 </a>
                                             </div>
                                             <div class="col-md-3">
                                                 <a href="#">
-                                                    <img src="http://placehold.it/250x250" alt="Image"
+                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
                                                         style="max-width:100%;">
                                                 </a>
                                             </div>
                                             <div class="col-md-3">
                                                 <a href="#">
-                                                    <img src="http://placehold.it/250x250" alt="Image"
+                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
                                                         style="max-width:100%;">
                                                 </a>
                                             </div>
                                             <div class="col-md-3">
                                                 <a href="#">
-                                                    <img src="http://placehold.it/250x250" alt="Image"
+                                                    <img class="portfolio-item" src="http://placehold.it/250x250" alt="Image"
                                                         style="max-width:100%;">
                                                 </a>
                                             </div>
@@ -129,4 +131,3 @@
         <div class="padding"></div>
         <div class="padding"></div>
     </div>
-</div>
